define both bin and lib types

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,13 @@ version = "0.1.0"
 edition = "2021"
 build = "build.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+crate-type = ["rlib"]
+path = "src/lib.rs"
+
+[[bin]]
+path = "src/main.rs"
+name = "symfonia"
 
 [dependencies]
 atomic = "0.6.0"
